# Engram-A-Universal-Memory-Layer-for-LLMs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MAKE_SETUP.md  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
apps/web/: .env.local  README.md  env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/.next/: app-build-manifest.json  trace
apps/web/.next/cache/: .tsbuildinfo
apps/web/.next/cache/eslint/: .cache_9jw9sy
apps/web/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
apps/web/.next/server/app/: page.js  page_client-reference-manifest.js
apps/web/.next/server/vendor-chunks/: @babel.js  @hookform.js  @radix-ui.js  @swc.js  @tanstack.js  attr-accept.js  class-variance-authority.js  clsx.js  d3-array.js  d3-color.js  d3-format.js  d3-interpolate.js  d3-path.js  d3-scale.js  d3-shape.js  d3-time-format.js  d3-time.js  (+26 more)
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/store/: chat.ts  ui.ts
apps/web/tests/: chat.spec.ts  dashboard.spec.ts  ingest.spec.ts  search.spec.ts
docs/: SECOND_BRAIN.md  api_reference.md  architecture.md
docs/diagrams/: architecture.mmd
engram/: __init__.py
engram-ui/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.txt  COMPONENT_FLOW.md  README.md  README_ARCHITECTURE.md  next.config.js  package-lock.json  package.json  tailwind.config.js
engram-ui/src/app/: globals.css  layout.tsx  page.tsx
engram-ui/src/app/dashboard/: layout.tsx  page.tsx
engram-ui/src/app/test/: page.tsx
engram-ui/src/components/: connector-card.tsx  floating-particles.tsx  graph-view.tsx  memory-card.tsx  navbar.tsx  providers.tsx  search-filters.tsx  sidebar.tsx  stat-card.tsx  topbar.tsx
engram-ui/src/components/ui/: badge.tsx  button.tsx  progress.tsx
engram/api/: __init__.py  analytics_routes.py  auth.py  chat_routes.py  connector_routes.py  deps.py  graph_routes.py  ingest_routes.py  memory_routes.py  middleware.py  models.py  processing_routes.py  router_routes.py  routes.py  server.py
engram/connectors/: __init__.py  base_connector.py  google_drive.py  notion.py  slack.py
engram/core/: __init__.py  consolidation.py  embeddings.py  forgetting.py  memory_store.py  retrieval.py
engram/database/: __init__.py  analytics.py  apikeys.py  graph_models.py  jobs.py  models.py  postgres.py
engram/database/alembic/: env.py
engram/database/alembic/versions/: 001_init_tables.py  002_add_jobs_auth_analytics_models.py
engram/graph/: __init__.py  api.py  builder.py  store.py
engram/ingest/: __init__.py  chat.py  image.py  pdf.py  pipeline.py  video.py  web.py
engram/providers/: __init__.py  anthropic_provider.py  base_provider.py  google_provider.py  local_sentence_transformers.py  multimodal_registry.py  openai_provider.py
engram/static/: graph.html
engram/utils/: __init__.py  config.py  ids.py  logger.py
engram/vectordb/: __init__.py  base.py  chroma_db.py  pinecone_db.py
engram/workers/: __init__.py  __main__.py  queue.py  worker.py
examples/: basic_usage.py  chat_demo.py  graph_demo.py  ingest_demo.py  multi_provider_demo.py  seed_demo.py
scripts/: init-db.sql  setup-web.sh  smoke_second_brain.py
sdk/python/: __init__.py  engram_client.py
sdk/typescript/: index.ts
tests/: conftest.py  test_api.py  test_auth_scopes.py  test_chat_rag.py  test_consolidation.py  test_graph_layer.py  test_ingest_pdf.py  test_ingest_web.py  test_memory_store.py  test_processing_status.py  test_retrieval.py  test_retrieve_filters.py  test_vectordb.py
(+61 files in other folders)
